# mobile_psi_cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  LICENSE  Readme.md
droidCrypto/: .clang-format  AES.cpp  AES.h  BitIterator.h  BitVector.cpp  BitVector.h  CMakeLists.txt  ChannelWrapper.cpp  ChannelWrapper.h  Commit.h  Curve.cpp  Curve.h  Defines.cpp  Defines.h  Matrix.h  MatrixView.h  PRNG.cpp  PRNG.h  RCurve.cpp  RCurve.h  RandomOracle.h  Readme.md  SHA1.cpp  SHA1.h  SHAKE128.cpp  SHAKE128.h  SecureRandom.cpp  SecureRandom.h
droidCrypto/android/: android_entry.cpp
droidCrypto/gc/: HalfGate.cpp  HalfGate.h  WireLabel.cpp  WireLabel.h
droidCrypto/gc/circuits/: AESCircuit.cpp  AESCircuit.h  Circuit.cpp  Circuit.h  LowMCCircuit.cpp  LowMCCircuit.h  TestCircuit.cpp  TestCircuit.h
droidCrypto/keccak/: CMakeLists.txt  KeccakSponge-common.h  KeccakSponge.inc  align.h
droidCrypto/keccak/opt64/: KeccakP-1600-64.macros  KeccakP-1600-SnP.h  KeccakP-1600-opt64.c
droidCrypto/lowmc/: CMakeLists.txt  lowmc.c  lowmc.c.i  lowmc.h  lowmc_128_128_192.c  lowmc_128_128_192.h  lowmc_128_128_20.c  lowmc_128_128_208.c  lowmc_128_128_208.h  lowmc_128_128_21.c  lowmc_128_128_21.h  lowmc_128_128_23.c  lowmc_128_128_23.h  lowmc_128_128_287.h  lowmc_128_128_32.c  lowmc_128_128_32.h  lowmc_192_192_413.h  lowmc_256_256_537.h  lowmc_impl.c.i  lowmc_pars.h  macros.h  mzd_additional.c  mzd_additional.h  simd.h
droidCrypto/lowmc/cmake/: CheckSIMD.cmake  Findm4ri.cmake
droidCrypto/lowmc/tests/: CMakeLists.txt  lowmc_test.c
droidCrypto/miracl/: CMakeLists.txt  LICENCE
droidCrypto/miracl/include/: miracl.h  mirdef.h
droidCrypto/miracl/src/: mralloc.c  mrarth0.c  mrarth3.c  mrbuild.c  mrcore.c  mrcurve.c  mrdouble.c  mrebrick.c  mrgcd.c  mrgcm.c  mrmonty.c  mrmuldv.s  mrprime.c  mrrand.c  mrround.c  mrshs512.c  mrsroot.c  mrstrong.c  mrzzn2.c  mrzzn2b.c  mrzzn3.c
droidCrypto/ot/: NaorPinkas.cpp  NaorPinkas.h  SimplestOT.cpp  SimplestOT.h  VerifiedSimplestOT.cpp  VerifiedSimplestOT.h
droidCrypto/ot/SimplestOT/: CMakeLists.txt
droidCrypto/ot/SimplestOT/ref10/: CMakeLists.txt  Keccak-simple.c  base.h  crypto_verify_32.h  fe_mul.c  ge.c  ge.h  ge_add.c  ge_double_scalarmult.c  ge_p1p1_to_p3.c  ge_p3_to_cached.c  ge_scalarmult_base.c  ot_config.h  ot_receiver.c  ot_receiver.h  ot_sender.c  ot_sender.h  pow22523.h  pow225521.h  sc.h  sc_muladd.c  sc_random.c  sc_reduce.c
droidCrypto/ot/TwoChooseOne/: IknpDotExtReceiver.cpp  IknpDotExtReceiver.h  IknpDotExtSender.cpp  IknpDotExtSender.h  IknpOtExtReceiver.cpp  IknpOtExtReceiver.h  IknpOtExtSender.cpp  IknpOtExtSender.h  KosDotExtReceiver.cpp  KosDotExtReceiver.h  KosDotExtSender.cpp  KosDotExtSender.h  KosOtExtReceiver.cpp  KosOtExtReceiver.h  KosOtExtSender.cpp  KosOtExtSender.h  OTExtInterface.h
droidCrypto/psi/: ECNRPSIClient.cpp  ECNRPSIClient.h  ECNRPSIServer.cpp  ECNRPSIServer.h  OPRFAESPSIClient.cpp  OPRFAESPSIClient.h  OPRFAESPSIServer.cpp  OPRFAESPSIServer.h  OPRFLowMCPSIClient.cpp  OPRFLowMCPSIClient.h  OPRFLowMCPSIServer.cpp  OPRFLowMCPSIServer.h  PhasedPSIClient.h  PhasedPSIServer.h
droidCrypto/psi/cuckoofilter/: CMakeLists.txt  bitsutil.h  cuckoofilter.h  debug.h  hashutil.cc  hashutil.h  packedtable.h  permencoding.h  printutil.h  singletable.h
droidCrypto/psi/tools/: ECNRPRF.cpp  ECNRPRF.h
droidCrypto/tests/: CMakeLists.txt  test_gc_aes.cpp  test_gc_lowmc.cpp  test_gc_lowmc_phased.cpp  test_ot_base.cpp  test_ot_dot.cpp  test_ot_kos.cpp  test_psi_oprf_aes.cpp  test_psi_oprf_ecnr.cpp  test_psi_oprf_lowmc.cpp  test_speed.cpp
droidCrypto/utils/: LinearCode.cpp  LinearCode.h  Log.cpp  Log.h  Utils.cpp  Utils.h  graycode.cpp  graycode.h
